@@ -22,6 +22,8 @@
 #include <gtkmm/stock.h>
 
 #include "joystick.hpp"
+#include "calibrate_center_dialog.hpp"
+#include "calibrate_maximum_dialog.hpp"
 #include "joystick_calibration_widget.hpp"
 
 JoystickCalibrationWidget::JoystickCalibrationWidget(Joystick& joystick)
@@ -29,10 +31,14 @@ JoystickCalibrationWidget::JoystickCalibrationWidget(Joystick& joystick)
     joystick(joystick),
     label("The <i>center</i> values are the minimum and the maximum values of the deadzone. "
           "The <i>min</i> and <i>max</i> values refer to the outer values. You have to unplug "
-          "your joystick or reboot to reset the values to their original default."),
+          "your joystick or reboot to reset the values to their original default.\n"
+          "\n"
+          "To automatically calibrate your joystick you can press the two buttons below:"),
     axis_frame("Axes"),
     axis_table(joystick.get_axis_count() + 1, 5),
-    calibration_button(Gtk::Stock::PROPERTIES)
+    buttonbox(Gtk::BUTTONBOX_SPREAD),
+    min_calibration_button("Calibrate Center"),
+    max_calibration_button("Calibrate Maximum")
 {
   set_has_separator(false);
 
@@ -43,6 +49,14 @@ JoystickCalibrationWidget::JoystickCalibrationWidget(Joystick& joystick)
   label.set_use_markup(true);
   label.set_line_wrap();
   get_vbox()->pack_start(label, Gtk::PACK_SHRINK);
+
+  min_calibration_button.signal_clicked().connect(sigc::mem_fun(this, &JoystickCalibrationWidget::calibrate_center));
+  max_calibration_button.signal_clicked().connect(sigc::mem_fun(this, &JoystickCalibrationWidget::calibrate_max));
+
+  buttonbox.set_border_width(5);
+  buttonbox.add(min_calibration_button);
+  buttonbox.add(max_calibration_button);
+  get_vbox()->pack_start(buttonbox, Gtk::PACK_SHRINK);
 
   axis_table.attach(*Gtk::manage(new Gtk::Label("Axes")), 0, 1, 0, 1);
 
@@ -142,6 +156,24 @@ JoystickCalibrationWidget::on_apply()
     }
 
   joystick.set_calibration(data);
+}
+
+void
+JoystickCalibrationWidget::calibrate_center()
+{
+  CalibrateCenterDialog dialog(joystick);
+  dialog.show_all();
+  dialog.run();
+  update_with(joystick.get_calibration());
+}
+
+void
+JoystickCalibrationWidget::calibrate_max()
+{
+  CalibrateMaximumDialog dialog(joystick);
+  dialog.show_all();
+  dialog.run();
+  update_with(joystick.get_calibration()); 
 }
 
 void
