@@ -2,6 +2,8 @@ jstest-gtk 0.1.1 (2009-05-??)
 =============================
 
 * removed accidental boost dependency
+* improved support for PS3 controller and other with huge axis/button counts
+* added man-page
 
 
 jstest-gtk 0.1.0 (2009-05-08)
